cmake_minimum_required(VERSION 3.23)
project(projects)

set(CMAKE_CXX_STANDARD 14)

add_executable(main.cpp main.cpp )
add_executable(ucgenIcAci.cpp ucgenIcAci.cpp)
add_executable(YildizUcgen.cpp YildizUcgen.cpp)
add_executable(suleyman.cpp suleyman.cpp)
add_executable(DikdortgeninAlaniHesaplama.cpp DikdortgeninAlaniHesaplama.cpp)
add_executable(FloorCeilRound.cpp FloorCeilRound.cpp)
add_executable(IfElseKullanimi.cpp IfElseKullanimi.cpp)
add_executable(IfElseKullanimi2.cpp IfElseKullanimi2.cpp)
add_executable(SwitchCaseYapisi.cpp SwitchCaseYapisi.cpp)
add_executable(IfElseKullanimi3.cpp IfElseKullanimi3.cpp)
add_executable(MatProblemi.cpp MatProblemi.cpp)
add_executable(AlanCevreHesabi.cpp AlanCevreHesabi.cpp)
add_executable(5sayininOrtalamasi.cpp 5sayininOrtalamasi.cpp)
add_executable(GirilenSayilarinOrtalamasi.cpp GirilenSayilarinOrtalamasi.cpp)
add_executable(ForIfElseKullanimi.cpp ForIfElseKullanimi.cpp)
add_executable(KupunAlaniHesaplama.cpp KupunAlaniHesaplama.cpp)
add_executable(ForKullanimi.cpp ForKullanimi.cpp)
add_executable(YildizSemasi.cpp YildizSemasi.cpp)
add_executable(YildizSemasi1.cpp YildizSemasi1.cpp)
add_executable(YildizSemasi2.cpp YildizSemasi2.cpp)
add_executable(YildizSemasi3.cpp YildizSemasi3.cpp)
add_executable(YildizSemasi4.cpp YildizSemasi4.cpp)
add_executable(YildizSemasi5.cpp YildizSemasi5.cpp)
add_executable(Deneme1.cpp Deneme1.cpp)
add_executable(Deneme2.cpp Deneme2.cpp)
add_executable(Deneme3.cpp Deneme3.cpp)
add_executable(FonksiyonOgrenme.cpp FonksiyonOgrenme.cpp)
add_executable(FonksiyonOrnekCozum.cpp FonksiyonOrnekCozum.cpp)
add_executable(Deneme4.cpp Deneme4.cpp)
add_executable(OzyineliFonksiyonlar.cpp OzyineliFonksiyonlar.cpp)
add_executable(UsHesaplatma.cpp UsHesaplatma.cpp)
add_executable(AsalSayiHesaplatma.cpp AsalSayiHesaplatma.cpp)
add_executable(CarpIsaretiKullanmadanCarpma.cpp CarpIsaretiKullanmadanCarpma.cpp)
add_executable(RastgeleSayiUretimi.cpp RastgeleSayiUretimi.cpp)
add_executable(DizilerveIndisler.cpp DizilerveIndisler.cpp)
add_executable(DizilerOrnekSoruCozumu.cpp DizilerOrnekSoruCozumu.cpp)
add_executable(AsalMersenneOrnek.cpp AsalMersenneOrnek.cpp)
add_executable(Enbuyuk3SayininToplaminiDondurenKod.cpp Enbuyuk3SayininToplaminiDondurenKod.cpp)
add_executable(EnKucuk3SayiyiBulma.cpp EnKucuk3SayiyiBulma.cpp)
add_executable(DizidekiSayilarinAritmetikOrtalamasi.cpp DizidekiSayilarinAritmetikOrtalamasi.cpp)
add_executable(DizidekiSayilarinGeometrikOrtalamasi.cpp DizidekiSayilarinGeometrikOrtalamasi.cpp)
add_executable(DizidekiTekSayilarinOrtalamasi.cpp DizidekiTekSayilarinOrtalamasi.cpp)
add_executable(DizidekiCiftSayilarinEnBuyuguileEnKucuguOrtalamasi.cpp DizidekiCiftSayilarinEnBuyuguileEnKucuguOrtalamasi.cpp)
add_executable(GirilenSayilarlaDiziToplama.cpp GirilenSayilarlaDiziToplama.cpp)
add_executable(ToplamaOyunu.cpp ToplamaOyunu.cpp)
add_executable(2BoyutluDiziler.cpp 2BoyutluDiziler.cpp)
add_executable(2DiziyiKarsilastirma.cpp 2DiziyiKarsilastirma.cpp)
add_executable(ZarOyunu.cpp ZarOyunu.cpp)
add_executable(MatrisinTranspozunuAlanKod.cpp MatrisinTranspozunuAlanKod.cpp)
add_executable(MatrislerinToplami.cpp MatrislerinToplami.cpp)
add_executable(MatrislerinToplami1.cpp MatrislerinToplami1.cpp)
add_executable(PointerGiris.cpp PointerGiris.cpp)
add_executable(DizilerinGostericilerleKullanilmasi.cpp DizilerinGostericilerleKullanilmasi.cpp)
add_executable(FonksiyonlarinGostericilerleKullanimiveReferansDegerileCagirma.cpp FonksiyonlarinGostericilerleKullanimiveReferansDegerileCagirma.cpp)
add_executable(DinamikHafizaveMalloc.cpp DinamikHafizaveMalloc.cpp)
add_executable(PointerArithmetic.cpp PointerArithmetic.cpp)
add_executable(FonksiyonlarinDizileriParametreAlmasi.cpp FonksiyonlarinDizileriParametreAlmasi.cpp)
add_executable(Sorulacaklar.cpp Sorulacaklar.cpp)
add_executable(FonksiyonileBirDizidekiEnbuyukileEnkucukSayininFarki.cpp FonksiyonileBirDizidekiEnbuyukileEnkucukSayininFarki.cpp)
add_executable(StringKavrami.cpp StringKavrami.cpp)
add_executable(StringTipi.cpp StringTipi.cpp)
add_executable(SaatDonusumuString.cpp SaatDonusumuString.cpp)
add_executable(DizgiOyunu.cpp DizgiOyunu.cpp)
add_executable(Palindrome.cpp Palindrome.cpp)
add_executable(PalindromeBenimki.cpp PalindromeBenimki.cpp)
add_executable(DosyaAcmaIslemi.cpp DosyaAcmaIslemi.cpp)
add_executable(ObjectOrientedGiris.cpp ObjectOrientedGiris.cpp)












